@@ -1,3 +1,11 @@
+2008-04-22  Tor Arne Vestbø  <tavestbo@trolltech.com>
+
+        Reviewed by Simon.
+
+        Implemented the generation of the title string for images.
+
+        * platform/qt/Localizations.cpp:
+
 2008-04-22  Simon Hausmann  <hausmann@webkit.org>
 
         Qt build fix.
